--- a/TCC/src/visao/Cadastro/Endereco/CadastroCEP.form
+++ b/TCC/src/visao/Cadastro/Endereco/CadastroCEP.form
@@ -171,7 +171,7 @@
                           <Component id="jcbRua" alignment="0" max="32767" attributes="0"/>
                           <Component id="jcbBairro" alignment="1" max="32767" attributes="0"/>
                           <Component id="jcbCidade" alignment="0" max="32767" attributes="0"/>
-                          <Component id="jcbEstado" alignment="0" max="32767" attributes="0"/>
+                          <Component id="jcbEstados" alignment="0" max="32767" attributes="0"/>
                           <Component id="jcbPais" alignment="1" pref="297" max="32767" attributes="0"/>
                           <Component id="jtfCEP" alignment="0" max="32767" attributes="0"/>
                       </Group>
@@ -185,7 +185,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jcbPais" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="jcbEstado" min="-2" max="-2" attributes="0"/>
+                      <Component id="jcbEstados" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
                       <Component id="jcbCidade" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -207,7 +207,7 @@
                 </Property>
               </Properties>
             </Component>
-            <Component class="javax.swing.JComboBox" name="jcbEstado">
+            <Component class="javax.swing.JComboBox" name="jcbEstados">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="0"/>
