--- a/TCC/src/visao/Login.form
+++ b/TCC/src/visao/Login.form
@@ -114,8 +114,8 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
         <Property name="columns" type="int" value="0"/>
-        <Property name="verticalGap" type="int" value="8"/>
         <Property name="rows" type="int" value="2"/>
+        <Property name="verticalGap" type="int" value="8"/>
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel2">
@@ -135,11 +135,14 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
         <Property name="columns" type="int" value="0"/>
         <Property name="horizontalGap" type="int" value="8"/>
-        <Property name="verticalGap" type="int" value="8"/>
         <Property name="rows" type="int" value="2"/>
+        <Property name="verticalGap" type="int" value="8"/>
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JTextField" name="jtfUser">
+          <Events>
+            <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="jtfUserKeyPressed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JPasswordField" name="jpfPass">
         </Component>
@@ -158,8 +161,8 @@
       <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
         <Property name="columns" type="int" value="0"/>
         <Property name="horizontalGap" type="int" value="8"/>
-        <Property name="verticalGap" type="int" value="2"/>
         <Property name="rows" type="int" value="2"/>
+        <Property name="verticalGap" type="int" value="2"/>
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JButton" name="jbCon">
