--- a/TCC/src/visao/Venda/VendaAberturaFechamentoCaixa.form
+++ b/TCC/src/visao/Venda/VendaAberturaFechamentoCaixa.form
@@ -183,6 +183,9 @@
                   <StringArray count="0"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jcbCaixaItemStateChanged"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jlUsuarioResp">
             </Component>
@@ -271,6 +274,9 @@
                 <Property name="selected" type="boolean" value="true"/>
                 <Property name="text" type="java.lang.String" value="Respons&#xe1;vel pelo caixa"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jrbUserRespActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JRadioButton" name="jrbUserOutro">
               <Properties>
@@ -292,6 +298,9 @@
             </Property>
             <Property name="enabled" type="boolean" value="false"/>
           </Properties>
+          <Events>
+            <EventHandler event="itemStateChanged" listener="java.awt.event.ItemListener" parameters="java.awt.event.ItemEvent" handler="jcbUsuarioAberturaItemStateChanged"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jlUsuarioRespAbertura">
         </Component>
